@@ -115,11 +115,20 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
-				<!-- <dependencies> <dependency> <groupId>org.junit.platform</groupId> 
-					<artifactId>junit-platform-surefire-provider</artifactId> <version>1.1.0</version> 
-					</dependency> <dependency> <groupId>org.junit.jupiter</groupId> <artifactId>junit-jupiter-engine</artifactId> 
-					<version>5.1.0</version> </dependency> </dependencies> -->
+				<version>2.22.0</version>
+				<configuration>
+                     <argLine>--illegal-access=permit</argLine>
+                </configuration>
+			</plugin>
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-failsafe-plugin</artifactId>
+			    <version>2.22.0</version>
+			    <configuration>
+			        <argLine>
+			            --illegal-access=permit
+			        </argLine>
+			    </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -181,8 +190,6 @@
 				<version>3.8.0</version>
 				<configuration>
 					<release>${maven.release.version}</release>
-					<!-- <source>${maven.compiler.source}</source>
-					<target>${maven.compiler.target}</target> -->
 					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
 				<dependencies>
@@ -228,12 +235,6 @@
 			</plugin>
 		</plugins>
 	</build>
-	<!-- <profiles> <profile> <id>release-sign-artifacts</id> <activation> <property> 
-		<name>performRelease</name> <value>true</value> </property> </activation> 
-		<build> <plugins> <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-gpg-plugin</artifactId> 
-		<version>1.1</version> <executions> <execution> <id>sign-artifacts</id> <phase>verify</phase> 
-		<goals> <goal>sign</goal> </goals> </execution> </executions> </plugin> </plugins> 
-		</build> </profile> </profiles> -->
 	<dependencies>
 		<dependency>
 			<groupId>com.beust</groupId>
@@ -365,8 +366,6 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.release.version>11</maven.release.version>
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
 		<slf4j.version>1.6.1</slf4j.version>
 	</properties>
 	<distributionManagement>
